<resources>
    <string name="app_name">İSTE Menü</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-Posta</string>
    <string name="login">Giriş Yap</string>
    <string name="register">Kayıt Ol</string>
    <string name="password">Parola</string>
    <string name="create_account">Hesabın yok mu? Kayıt ol</string>
    <string name="pass_verifaction">Parola Onay</string>
    <string name="go_to_login">Hesabın var mı? Giriş yap</string>
    <string name="like">Beğendim</string>
    <string name="dislike">Beğenmedim</string>
</resources>