<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#dbd9dd"
    android:orientation="vertical"
    tools:context=".fragments.LoginFragment">

    <app.rive.runtime.kotlin.RiveAnimationView
        android:id="@+id/riveView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:layout_constraintBottom_toTopOf="@+id/cv_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riveAlignment="BOTTOM_CENTER" />
    
    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        app:cardCornerRadius="24dp"
        android:backgroundTint="@color/light_gray"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:elevation="10dp"
                android:drawablePadding="10dp"
                android:paddingStart="10dp"
                android:background="@drawable/custom_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="48dp"
                android:layout_marginHorizontal="25dp"/>

            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:elevation="10dp"
                android:drawablePadding="10dp"
                android:layout_marginTop="24dp"
                android:paddingStart="10dp"
                android:background="@drawable/custom_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etLoginEmail"
                android:layout_marginHorizontal="25dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/login"
                android:textSize="18sp"
                android:backgroundTint="#fc678e"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>





</LinearLayout>